<resources>
    <string name="show_messages_check">Show messages?</string>
    <string name="view_message_title_string">Title:</string>
    <string name="view_message_data_string">Message:</string>
    <string name="language_text">Language:</string>
    <string name="message_text">Message:</string>
    <string name="title_text">Title</string>
    <string name="app_name">Fluid Nexus</string>
    <string name="settings_title">Settings (Fluid Nexus)</string>
    <string name="message_view_title">View Message (Fluid Nexus)</string>
    <string name="help_title">Help (Fluid Nexus)</string>
    <string name="about_title">About (Fluid Nexus)</string>
    <string name="message_add_outgoing_title">New Message (Fluid Nexus)</string>
    <string name="message_edit_title">Edit Message (Fluid Nexus)</string>
    <string name="message_view_outgoing_title">View Outgoing Messages (Fluid Nexus)</string>
    <string name="message_list_header_text_all">ALL MESSAGES</string>
    <string name="message_list_header_text_public">PUBLIC MESSAGES</string>
    <string name="message_list_header_text_outgoing">OUTGOING MESSAGES</string>
    <string name="message_list_header_text_blacklist">BLACKLISTED MESSAGES</string>
    <string name="menu_message_list_context_title">Context menu</string>
    <string name="message_list_created_time">Created on </string>
    <string name="message_list_received_time">Received on </string>
    <string name="menu_add_message">New Message</string>
    <string name="menu_view_all">View All</string>
    <string name="menu_view_public">View Public</string>
    <string name="menu_view_outgoing">View Outgoing</string>
    <string name="menu_view_blacklist">View Blacklist</string>
    <string name="menu_delete">Delete Message</string>
    <string name="menu_blacklist">Blacklist Message</string>
    <string name="menu_unblacklist">Unblacklist Message</string>
    <string name="menu_edit">Edit Message</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_discoverable">Make discoverable</string>
    <string name="menu_request_authorization">Request Nexus Authorization</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="really_delete_dialog">Are you sure you want to delete this message?</string>
    <string name="really_blacklist_dialog">Are you sure you want to blacklist this message?</string>
    <string name="really_unblacklist_dialog">Are you sure you want to remove this message from the blacklist?</string>
    <string name="no_key_dialog">No Nexus Key or Nexus Secret exists.  These are necessary in order to request authorization.  Please visit http://fluidnexus.net and create an account (or login to an existing one) and request a Nexus Key and Secret.  If you already have a Key and Secret, please enter them into the Preferences.</string>
    <string name="really_save_dialog">Do you want to save this message?</string>
    <string name="same_dialog">The message you are trying to save already exists in the database; please change the title and/or the content.</string>
    <string name="view_message_back">Back</string>
    <string name="save_message_button">Save</string>
    <string name="discard_message_button">Discard</string>
    <string name="open_attachment_button_text">Open</string>
    <string name="title_edit_label">Title:</string>
    <string name="message_edit_label">Message:</string>
    <string name="public_label">Public (push to nexus)?</string>
    <string name="attachment_add_label">Attachment:</string>
    <string name="add_attachment_prompt">Attachment Type</string>
    <string name="add_attachment_button">Add Attachment...</string>
    <string name="remove_attachment_button">Remove Attachment...</string>
    <string name="settings_save_button">Save</string>
    <string name="settings_cancel_button">Cancel</string>
    <string name="button_help">Help</string>
    <string name="button_concept">Concept</string>
    <string name="button_return">Return</string>
    <string name="notification">Fluid Nexus Notification</string>
    <string name="notification_title_new_message">New Message</string>
    <string name="notification_fluid_nexus_device_found">Fluid Nexus device found</string>
    <string name="notification_fluid_nexus_discovery_complete">Device discovery complete</string>
    <string name="notification_fluid_nexus_services_complete">Services discovery complete</string>
    <string name="notification_fluid_nexus_send_outgoing_complete">Sending outgoing message</string>
    <string name="toast_new_message_received">New message received.</string>
    <string name="toast_message_deleted">Message deleted.</string>
    <string name="toast_message_blacklisted">Message blacklisted.</string>
    <string name="toast_message_unblacklisted">Message unblacklisted.</string>
    <string name="toast_discoverable_ok">Device set to be discoverable for %d seconds.</string>
    <string name="toast_discoverable_notok">Device not set to be discoverable</string>
    <string name="intent_new_message">net.fluidnexus.FluidNexusAndroid.NEW_MESSAGE</string>
    <string name="intent_discovery_started">net.fluidnexus.FluidNexusAndroid.DISCOVERY_STARTED</string>
    <string name="intent_device_found">net.fluidnexus.FluidNexusAndroid.REMOTE_DEVICE_FOUND</string>
    <string name="intent_discovery_completed">net.fluidnexus.FluidNexusAndroid.DISCOVERY_COMPLETED</string>
    <string name="intent_service_discovery_completed">net.fluidnexus.FluidNexusAndroid.SERVICE_DISCOVERY_COMPLETED</string>
    <string name="intent_send_messages_completed">net.fluidnexus.FluidNexusAndroid.SEND_MESSAGES_COMPLETED</string>
    <string name="service_started">Fluid Nexus service started</string>
    <string name="service_stopped">Fluid Nexus service stopped</string>
    <string name="service_label">Fluid Nexus Network service</string>
    <string name="notification_starting">Starting network services</string>
    <string name="notification_bluetooth">Bluetooth</string>
    <string name="notification_zeroconf">Zeroconf</string>
    <string name="notification_nexus">Nexus</string>
    <string name="preferences">Fluid Nexus Preferences</string>
    <string name="preferences_category_interface">Interface</string>
    <string name="preferences_category_network">Network</string>
    <string name="preferences_category_bluetooth">Bluetooth</string>
    <string name="preferences_category_zeroconf">Zeroconf</string>
    <string name="preferences_category_nexus">Nexus</string>
    <string name="preferences_show_messages">Show messages?</string>
    <string name="preferences_show_messages_summary">Whether or not to show messages in the interface.</string>
    <string name="preferences_send_blacklist">Send blacklist messages?</string>
    <string name="preferences_send_blacklist_summary">Whether or not to spread messages you have blacklisted.</string>
    <string name="preferences_vibrate">Vibrate?</string>
    <string name="preferences_vibrate_summary">Whether or not to vibrate when new messages arrive.</string>
    <string name="preferences_enable_bluetooth_service">Bluetooth Service</string>
    <string name="preferences_enable_bluetooth_service_summary">Whether or not the bluetooth service is enabled.  This service will run even when the application has ended.</string>
    <string name="preferences_enable_zeroconf_service">Zeroconf Service</string>
    <string name="preferences_enable_zeroconf_service_summary">Whether or not the zeroconf service is enabled.  This service will run even when the application has ended.  This feature is under development.</string>
    <string name="preferences_enable_adhocwifi_service">Ad-Hoc Wifi Service</string>
    <string name="preferences_enable_adhocwifi_service_summary">Whether or not the Ad-Hoc Wifi service is enabled.  This service will run even when the application has ended.  This feature is under development.</string>
    <string name="preferences_enable_nexus_service">Nexus Service</string>
    <string name="preferences_enable_nexus_service_summary">Whether to post public messages to the Nexus.  This feature requires some sort of access to the internet over Wifi, but will still run without problems if Wifi is not enabled</string>
    <string name="preferences_bluetooth_bonded_only_flag">Bonded only?</string>
    <string name="preferences_bluetooth_bonded_only_flag_summary">If checked, will not do device discovery and will only connected to previously bonded devices.</string>
    <string name="preferences_bluetooth_scan_frequency">Scan Frequency</string>
    <string name="preferences_bluetooth_scan_frequency_summary">How often to scan for other devices.  Shorter durations will severely impact battery life.</string>
    <string name="preferences_zeroconf_scan_frequency">Scan Frequency</string>
    <string name="preferences_zeroconf_scan_frequency_summary">How often to scan for other devices.  Shorter durations will severely impact battery life.</string>
    <string name="preferences_nexus_key">Nexus Key</string>
    <string name="preferences_nexus_key_summary">The key provided by to you on the Fluid Nexus website for posting to the Nexus</string>
    <string name="preferences_nexus_key_title">Nexus Key</string>
    <string name="preferences_nexus_secret">Nexus Secret</string>
    <string name="preferences_nexus_secret_summary">The secret provided by to you on the Fluid Nexus website for posting to the Nexus</string>
    <string name="preferences_nexus_secret_title">Nexus Secret</string>
    <string name="preferences_nexus_token">Nexus Token </string>
    <string name="preferences_nexus_token_summary">The token provided by to you on the Fluid Nexus website for posting to the Nexus.  This is added automatically upon pressing "Request authorization token" in the main menu.</string>
    <string name="preferences_nexus_token_title">Nexus Token</string>
    <string name="preferences_nexus_token_secret">Nexus Token Secret</string>
    <string name="help_help_text">There are two types of messages in Fluid Nexus.  The first, \"outgoing\", are messages you have created and that are designed to be the first ones sent to other nearby phones.  These are indicated by the icon with the arrow pointing  left, outside of the device.  The second are messages that you have received from other phones; these are indicated by the icon without the arrow.  Your phone will try and send these messages after it has sent all of the messages marked as outgoing.\n
\n
VIEWING A MESSAGE: Simply click/tap/hit enter on a message to open a window that allows you to see the entirety of the message.\n
DELETING A MESSAGE: Once you have selected a message using the keyboard or direction pad, open the menu and select \"Delete message\" to remove it from the database and advertisements.\n
ADDING A MESSAGE: Open the menu and select \"New Message\".  Enter your message, select save, and it will be queued for for sending, as well as appearing in your message list.\n
VIEW ALL MESSAGES: The default opening view of Fluid Nexus, this shows all of the messages on your device.  You can also return to this view by opening the menu and selecting \"View All\".\n
VIEW OUTGOING: This shows you only the messages you have created and that are thus marked as \"outgoing\".  You can select this by opening the menu and selecting \"View Outgoing\".\n
\n
ABOUT\n
\n
Google Android port by Nick Knouf.\n
\n
Nokia Series 60 Python version by Nick Knouf with Bruno Vianna, Luis Ayuso, and Mónica Sánchez.\n
\n
Source code is available from http://fluidnexus.net and is licensed under the GPLv3.  Code is available at <a href="https://github.com/zeitkunst/FluidNexusAndroid">https://github.com/zeitkunst/FluidNexusAndroid</a> and for the desktop version <a href="https://github.com/zeitkunst/FluidNexus">https://github.com/zeitkunst/FluidNexus</a>.</string>
</resources>