<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preferences_category_interface">
        <CheckBoxPreference
            android:title="@string/preferences_show_messages"
            android:defaultValue="true"
            android:summary="@string/preferences_show_messages_summary"
            android:key="showMessagesPref" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_network">
        <CheckBoxPreference
            android:title="@string/preferences_enable_bluetooth_service"
            android:defaultValue="true"
            android:summary="@string/preferences_enable_bluetooth_service_summary"
            android:key="enableBluetoothServicePref" />
        <CheckBoxPreference
            android:title="@string/preferences_enable_zeroconf_service"
            android:defaultValue="true"
            android:enabled="false"
            android:summary="@string/preferences_enable_zeroconf_service_summary"
            android:key="enableZeroconfServicePref" />
        <CheckBoxPreference
            android:title="@string/preferences_enable_adhocwifi_service"
            android:defaultValue="true"
            android:enabled="false"
            android:summary="@string/preferences_enable_adhocwifi_service_summary"
            android:key="enableAdhocwifiServicePref" />

    </PreferenceCategory>
</PreferenceScreen>
