<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add"
        android:title="@string/menu_add_message"
        android:icon="@drawable/menu_add"
        android:alphabeticShortcut="a" />
    <item android:id="@+id/menu_view_all"
        android:title="@string/menu_view_all"
        android:icon="@drawable/menu_all"
        android:alphabeticShortcut="v" />
    <item android:id="@+id/menu_view_outgoing"
        android:title="@string/menu_view_outgoing"
        android:icon="@drawable/menu_view"
        android:alphabeticShortcut="o" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/menu_settings"
        android:alphabeticShortcut="s" />
    <item android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:icon="@drawable/menu_help"
        android:alphabeticShortcut="h" />
</menu>
